--- a/BookingAppServer/Backend.Api/Properties/launchSettings.json
+++ b/BookingAppServer/Backend.Api/Properties/launchSettings.json
@@ -1,18 +1,20 @@
 ﻿{
+  "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:2333",
-      "sslPort": 44366
+      "applicationUrl": "http://localhost:34874",
+      "sslPort": 44322
     }
   },
   "profiles": {
-    "BookingAppServer": {
+    "Backend.Api": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7181;http://localhost:5138",
+      "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:7257;http://localhost:5123",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,6 +22,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
