--- a/BookingAppServer/AdminApp/appsettings.Development.json
+++ b/BookingAppServer/AdminApp/appsettings.Development.json
@@ -1,8 +1,12 @@
-{
+{  
+  "ConnectionStrings": {
+  "DefaultConnection": "Server=.;Database=FoodApp;User ID=sa;Password=qwe@1234"
+},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   }
+
 }
