--- a/BookingAppServer/Backend.Api/Properties/launchSettings.json
+++ b/BookingAppServer/Backend.Api/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "Backend.Api": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:5123",
       "environmentVariables": {
