--- a/BookingAppServer/Backend.Api/appsettings.Development.json
+++ b/BookingAppServer/Backend.Api/appsettings.Development.json
@@ -7,5 +7,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Tokens": {
+    "Key": "0123456789ABCDEF",
+    "Issuer": "https://webapi.food.com.vn"
   }
 }
