--- a/BookingAppServer/Backend.Api/appsettings.json
+++ b/BookingAppServer/Backend.Api/appsettings.json
@@ -1,9 +1,16 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=FoodApp;User ID=huybinh0794;Password=qwe@1234"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Tokens": {
+    "Key": "0123456789ABCDEF",
+    "Issuer": "https://webapi.food.com.vn"
+  }
 }
