[fix]: configuration authentication with cookie and jwt

--- a/BookingAppServer/FoodAppServer/appsettings.json
+++ b/BookingAppServer/FoodAppServer/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=FoodApp;User ID=sa;Password=qwe@1234;TrustServerCertificate=true"
+    "DefaultConnection": "Server=203.113.174.12;Database=FoodApp;User ID=huybinh0794;Password=qwe@1234;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
