--- a/BookingAppServer/FoodAppServer/appsettings.json
+++ b/BookingAppServer/FoodAppServer/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=203.113.174.12;Database=FoodApp;User ID=huybinh0794;Password=qwe@1234;TrustServerCertificate=True"
+    "DefaultConnection": "Server=phuocthaosolar.com;Database=FoodApp;User ID=huybinh0794;Password=qwe@1234;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
