[fix]: fix the connection strings

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 .DS_Store
 BookingAppServer/.idea/.idea.BookingAppServer/.idea/workspace.xml
 *.xml
+BookingAppServer/FoodAppServer/appsettings.json
